scrollbar fix

--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,19 @@ html,
 body {
   overflow-x: hidden;
 }
-body::-webkit-scrollbar {
-  width: 1px;
-}
 body {
   padding: 0px;
   margin: 0px;
+}
+body::-webkit-scrollbar {
+    width: 1px;
+}
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
 }
 @import url("https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&family=Poppins:ital,wght@1,500&display=swap");
